--- a/index.html
+++ b/index.html
@@ -33,8 +33,27 @@
 
   <div id="technology">
     <p class="technology">Tecnologias</p>
-    <nav>
-    </nav>
+    <table class="table-technology">
+      <tr>
+        <br><br>
+      </tr>
+      <tr>
+        <td>PHP</td>
+        <td>JAVASCRIPT</td>
+        <td>LARAVEL</td>
+      </tr>
+      <tr>
+        <td>GIT</td>
+        <td>GITHUB</td>
+        <td>VUE.JS</td>
+      </tr>
+      <tr>
+        <td>MYSQL</td>
+        <td>HTML</td>
+        <td>CSS</td>
+      </tr>
+
+    </table>
   </div>
 
 
