--- a/index.html
+++ b/index.html
@@ -1,67 +1,79 @@
 <!DOCTYPE html>
 <html lang="PT-BR">
 
-<head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Portifolio</title>
-  <link rel="stylesheet" href="style.css" />
-</head>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Portifolio</title>
+    <link rel="stylesheet" href="style.css" />
+  </head>
 
-<body>
-  <h3><p>Rodrigo da Hora Oliveira</p></h3>
-  <h5><p>Full Stack Developer</p></h5>
+  <body>
+    <h3>
+      <p>Rodrigo da Hora Oliveira</p>
+    </h3>
+    <h5>
+      <p>Full Stack Developer</p>
+    </h5>
 
-  <div id="profile">
-    <div id="image">
-  </div>
-        
+    <div id="profile">
+      <div id="image">
+      </div>
 
-    <div id="projects">
+
+      <div id="projects">
+        <h5>Meus projetos</h5>
+      </div>
     </div>
-  </div>
-  
-  <div id="social">
-    <ul>
-      <li><ion-icon name="location-outline"></ion-icon>Brasil</li>
-      <li><ion-icon name="logo-twitter"></ion-icon><a href="https://twitter.com/dahora328" target="_blank">Twitter</a></li>
-      <li><ion-icon name="logo-linkedin"></ion-icon><a href="https://linkedin.com/in/rodrigo-da-hora-oliveira-3a9a7b232" target="_blank">Linkedin</a></li>
-      <li><ion-icon name="logo-github"></ion-icon><a href="https://github.com/dahora328" target="_blank">GitHub</a></li>
-      <li><ion-icon name="logo-instagram"></ion-icon><a href="https://instagram.com/rodrigoliveira328" target="_blank">Instagram</a></li>
-    </ul>
-  </div>
 
-  <div id="technology">
-    <p class="technology">Tecnologias</p>
-    <table class="table-technology">
-      <tr>
-        <br><br>
-      </tr>
-      <tr>
-        <td>PHP</td>
-        <td>JAVASCRIPT</td>
-        <td>LARAVEL</td>
-      </tr>
-      <tr>
-        <td>GIT</td>
-        <td>GITHUB</td>
-        <td>VUE.JS</td>
-      </tr>
-      <tr>
-        <td>MYSQL</td>
-        <td>HTML</td>
-        <td>CSS</td>
-      </tr>
+    <div id="social">
+      <ul>
+        <li><ion-icon name="location-outline"></ion-icon>Brasil</li>
+        <li><ion-icon name="logo-twitter"></ion-icon><a href="https://twitter.com/dahora328" target="_blank">Twitter</a>
+        </li>
+        <li><ion-icon name="logo-linkedin"></ion-icon><a href="https://linkedin.com/in/rodrigo-da-hora-oliveira-3a9a7b232"
+            target="_blank">Linkedin</a></li>
+        <li><ion-icon name="logo-github"></ion-icon><a href="https://github.com/dahora328" target="_blank">GitHub</a></li>
+        <li><ion-icon name="logo-instagram"></ion-icon><a href="https://instagram.com/rodrigoliveira328"
+            target="_blank">Instagram</a></li>
+        <li><ion-icon name="mail-open-outline"></ion-icon>rodrigoliveira328@hotmail.com</li>
+      </ul>
+    </div>
 
-    </table>
-  </div>
+    <div id="technology">
+      <p class="technology">Tecnologias</p>
+      <table class="table-technology">
+        <tr>
+          <br><br>
+        </tr>
+        <tr>
+          <td>PHP</td>
+          <td>JAVASCRIPT</td>
+          <td>LARAVEL</td>
+        </tr>
+        <tr>
+          <td>GIT</td>
+          <td>GITHUB</td>
+          <td>VUE.JS</td>
+        </tr>
+        <tr>
+          <td>MYSQL</td>
+          <td>HTML</td>
+          <td>CSS</td>
+        </tr>
+      </table>
+    </div>
+
+    <div id="experiences">
+      <h5>Experiências</h5>
+    </div>
 
 
 
-  <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
-  <script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
-  <script src="./script.js"></script>
-  </script>
-</body>
+    <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
+    <script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
+    <script src="./script.js"></script>
+    </script>
+  </body>
 
 </html>
