--- a/index.html
+++ b/index.html
@@ -66,6 +66,11 @@
 
     <div id="experiences">
       <h5>Experiências</h5>
+      <ul>
+        <li><h3>Tocantins Informática</h3>
+          <!--2018 - Atualmente <br> Suporte Técnico-->
+        </li>
+      </ul>
     </div>
 
 
