Sobre mim e experiências

--- a/index.html
+++ b/index.html
@@ -15,7 +15,9 @@
     <h5>
       <p>Full Stack Developer</p>
     </h5>
-
+    <div id="about">
+      <p>Sobre mim</p>
+    </div>
     <div id="profile">
       <div id="image">
       </div>
@@ -68,8 +70,8 @@
       <h5>Experiências</h5>
       <ul>
         <li><h3>Tocantins Informática</h3>
-          <!--2018 - Atualmente <br> Suporte Técnico-->
-        </li>
+          <h4>2018 - Atualmente <br> Suporte Técnico</h4>
+        </li>        
       </ul>
     </div>
 
@@ -80,5 +82,11 @@
     <script src="./script.js"></script>
     </script>
   </body>
+
+  <footer>
+    <div id="footer_about">
+      teste
+    </div>
+  </footer>
 
 </html>
