--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
       <p>Full Stack Developer</p>
     </h5>
     <div id="about">
-      <p>Sobre mim</p>
+      <a href="#aboutlink">Sobre mim</a>
     </div>
     <div id="profile">
       <div id="image">
@@ -85,7 +85,7 @@
 
   <footer>
     <div id="footer_about">
-      teste
+      <section id="aboutlink">teste</section>
     </div>
   </footer>
 
